@@ -1,3 +1,9 @@
+2006-11-15  Bruno coudoin  <bruno.coudoin@free.fr>
+
+	* src/boards/wordprocessor.c: (display_style_selector),
+	(display_color_style_selector), (item_event_style_selection),
+	(item_event_color_style_selection): Fixed untranslated combo
+
 2006-11-13  Bruno coudoin  <bruno.coudoin@free.fr>
 
 	* src/gcompris/properties.c: (gc_prop_config_file_get),
